--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,6 +29,6 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/bookTracer:latest
-            ghcr.io/${{ github.repository_owner }}/bookTracer:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/booktracer:latest
+            ghcr.io/${{ github.repository_owner }}/booktracer:${{ github.sha }}
 
